<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/app_bar_main"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/DeepGrey" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/White"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/btn_home"
            style="@style/MainRadioTheme"
            android:drawableTop="@drawable/select_home"
            android:text="@string/select_home"
            android:textColor="@drawable/select_text_color"
             />

        <RadioButton
            android:id="@+id/btn_contacts"
            style="@style/MainRadioTheme"
            android:drawableTop="@drawable/select_contacts"
            android:text="@string/select_contacts"
            android:textColor="@drawable/select_text_color"/>

        <RadioButton
            android:id="@+id/btn_sns"
            style="@style/MainRadioTheme"
            android:drawableTop="@drawable/select_sns"
            android:text="@string/select_sns"
            android:textColor="@drawable/select_text_color" />

    </RadioGroup>
    </LinearLayout>
</RelativeLayout>
